tests/parse-errors/twoElses.rock
if True
say "hello"
else
say "hi"
else
say "bye"

